be - init medical report
