# be/controllers/ticket.go
@@ -5,6 +5,7 @@ import (
 	"clinic-management/types"
 	"clinic-management/utils/query"
 	"net/http"
+	"strconv"
 	"time"
 
 	"github.com/gin-gonic/gin"
@@ -13,6 +14,11 @@ import (
 type TicketRequest struct {
 	PatientID uint  `json:"patient_id" binding:"required"`
 	UpdatedBy *uint `json:"updated_by"`
+}
+
+type UpdateTicketRequest struct {
+	Status    types.TicketStatus `json:"status"`
+	UpdatedBy *uint              `json:"updated_by"`
 }
 
 type TicketResponse struct {
@@ -25,13 +31,52 @@ type TicketListResponse struct {
 	Data []models.Ticket `json:"data"`
 }
 
-// @Summary Create waiting ticket
-// @Description Create waiting ticket
+// @Summary Get ticket
+// @Description Get ticket
+// @Tags ticket
+// @Produce json
+// @Param status query types.TicketStatus false "Ticket status"
+// @Param date query string false "Date"
+// @Param order_by query string false "Order by" default(STT)
+// @Param page query int false "Page" default(1)
+// @Param page_size query int false "Page size" default(10)
+// @Success 200 {object} TicketListResponse "Ticket response"
+// @Router /ticket [get]
+func GetTicket(c *gin.Context) {
+	statusValue, err := strconv.Atoi(c.Query("status"))
+	if err != nil {
+		statusValue = 0
+	}
+	status := types.TicketStatus(statusValue)
+
+	// var date time.Time
+	date, err := time.Parse("2006-01-02", c.Query("date"))
+	if err != nil {
+		date = time.Now()
+	}
+
+	tickets, err := models.GetTicket(query.Paginate(c),
+		query.OrderBy(c.Query("order_by"), false),
+		query.QueryByDate("NgayKham", date),
+		query.QueryByField("TrangThai", status.Value()))
+	if err != nil {
+		c.JSON(http.StatusBadRequest, ErrorResponse(err.Error()))
+		return
+	}
+
+	c.JSON(http.StatusOK, TicketListResponse{
+		Response: SuccessfulResponse,
+		Data:     tickets,
+	})
+}
+
+// @Summary Create ticket
+// @Description Create ticket
 // @Tags ticket
 // @Accept json
 // @Produce json
-// @Param data body TicketRequest true "Waiting ticket data"
-// @Success 200 {object} TicketListResponse "Waiting ticket response"
+// @Param data body TicketRequest true "Ticket data"
+// @Success 200 {object} TicketResponse "Ticket response"
 // @Router /ticket [post]
 func CreateTicket(c *gin.Context) {
 	var input TicketRequest
@@ -40,10 +85,11 @@ func CreateTicket(c *gin.Context) {
 		return
 	}
 
+	now := time.Now()
 	ticket := models.Ticket{
 		PatientID: input.PatientID,
 		Status:    types.Waiting.Value(),
-		Date:      time.Now(),
+		Date:      &(now),
 		UpdatedBy: input.UpdatedBy,
 	}
 
@@ -59,38 +105,45 @@ func CreateTicket(c *gin.Context) {
 	})
 }
 
-// @Summary Get ticket
-// @Description Get ticket
+// @Summary Update ticket
+// @Description Update ticket
 // @Tags ticket
+// @Accept json
 // @Produce json
-// @Param page query int false "Page" default(1)
-// @Param page_size query int false "Page size" default(10)
-// @Success 200 {object} TicketListResponse "Ticket response"
-// @Router /ticket [get]
-func GetTicket(c *gin.Context) {
-	tickets, err := models.GetTicket(query.Paginate(c))
+// @Param id path int true "Ticket id"
+// @Param data body UpdateTicketRequest true "Ticket data"
+// @Success 200 {object} TicketResponse "Ticket response"
+// @Router /ticket/{id} [put]
+func UpdateTicket(c *gin.Context) {
+	id := c.Param("id")
+
+	var input UpdateTicketRequest
+	if err := c.ShouldBind(&input); err != nil {
+		c.JSON(http.StatusBadRequest, ErrorResponse(err.Error()))
+		return
+	}
+
+	ticket, err := models.GetTicketByID(id)
 	if err != nil {
 		c.JSON(http.StatusBadRequest, ErrorResponse(err.Error()))
 		return
 	}
 
-	c.JSON(http.StatusOK, TicketListResponse{
+	updatedTicket := models.Ticket{
+		Status:    input.Status.Value(),
+		UpdatedBy: input.UpdatedBy,
+	}
+
+	ticket, err = ticket.Update(updatedTicket)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, ErrorResponse(err.Error()))
+		return
+	}
+
+	c.JSON(http.StatusOK, TicketResponse{
 		Response: SuccessfulResponse,
-		Data:     tickets,
+		Data:     *ticket,
 	})
-}
-
-// @Summary Get ticket enums
-// @Description Get ticket enums
-// @Tags ticket
-// @Produce json
-// @Router /ticket/enums [get]
-func GetTicketEnums(c *gin.Context) {
-	response := SuccessfulResponse
-
-	response.Data = types.TicketEnums
-
-	c.JSON(http.StatusOK, response)
 }
 
 // @Summary Delete ticket
@@ -119,4 +172,17 @@ func DeleteTicket(c *gin.Context) {
 		Response: SuccessfulResponse,
 		Data:     *ticket,
 	})
+}
+
+// @Summary Get ticket enums
+// @Description Get ticket enums
+// @Tags ticket
+// @Produce json
+// @Router /ticket/enums [get]
+func GetTicketEnums(c *gin.Context) {
+	response := SuccessfulResponse
+
+	response.Data = types.TicketEnums
+
+	c.JSON(http.StatusOK, response)
 }
