# be/docs/swagger.yaml
@@ -19,6 +19,46 @@ definitions:
       status:
         type: string
     type: object
+  controllers.MedicalReportListResponse:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/models.MedicalReport'
+        type: array
+      message:
+        type: string
+      status:
+        type: string
+    type: object
+  controllers.MedicalReportRequest:
+    properties:
+      date:
+        type: string
+      diagnose:
+        type: string
+      doctor_id:
+        type: integer
+      patient_id:
+        type: integer
+      prescription:
+        items:
+          $ref: '#/definitions/controllers.PrescriptionRequest'
+        type: array
+      updated_by:
+        type: integer
+    required:
+    - doctor_id
+    - patient_id
+    type: object
+  controllers.MedicalReportResponse:
+    properties:
+      data:
+        $ref: '#/definitions/models.MedicalReport'
+      message:
+        type: string
+      status:
+        type: string
+    type: object
   controllers.PatientListResponse:
     properties:
       data:
@@ -39,7 +79,7 @@ definitions:
       full_name:
         type: string
       gender:
-        type: string
+        $ref: '#/definitions/types.Gender'
       identity_card:
         type: string
       phone_number:
@@ -62,6 +102,19 @@ definitions:
         type: string
       status:
         type: string
+    type: object
+  controllers.PrescriptionRequest:
+    properties:
+      instruction:
+        type: string
+      medicine_id:
+        type: string
+      quantity:
+        type: integer
+    required:
+    - instruction
+    - medicine_id
+    - quantity
     type: object
   controllers.RegulationListResponse:
     properties:
@@ -193,20 +246,13 @@ definitions:
       full_name:
         type: string
       gender:
-        type: string
+        $ref: '#/definitions/types.Gender'
       identity_card:
         type: string
       phone_number:
         type: string
       updated_by:
         type: integer
-    required:
-    - address
-    - birth_date
-    - full_name
-    - gender
-    - identity_card
-    - phone_number
     type: object
   controllers.UpdateRegulationRequest:
     properties:
@@ -246,6 +292,38 @@ definitions:
       updated_by:
         type: integer
     type: object
+  controllers.UpdateTicketRequest:
+    properties:
+      status:
+        $ref: '#/definitions/types.TicketStatus'
+      updated_by:
+        type: integer
+    type: object
+  models.MedicalReport:
+    properties:
+      created_at:
+        type: string
+      date:
+        type: string
+      diagnose:
+        type: string
+      doctor:
+        $ref: '#/definitions/models.Staff'
+      doctor_id:
+        type: integer
+      id:
+        type: integer
+      patient_id:
+        type: integer
+      prescription:
+        items:
+          $ref: '#/definitions/models.Prescription'
+        type: array
+      updated_at:
+        type: string
+      updated_by:
+        type: integer
+    type: object
   models.Patient:
     properties:
       address:
@@ -264,6 +342,23 @@ definitions:
         type: string
       phone_number:
         type: string
+      updated_at:
+        type: string
+      updated_by:
+        type: integer
+    type: object
+  models.Prescription:
+    properties:
+      created_at:
+        type: string
+      instruction:
+        type: string
+      medical_report_id:
+        type: integer
+      medicine_id:
+        type: string
+      quantity:
+        type: integer
       updated_at:
         type: string
       updated_by:
@@ -377,6 +472,16 @@ definitions:
     x-enum-varnames:
     - Working
     - Quit
+  types.TicketStatus:
+    enum:
+    - 1
+    - 2
+    - 3
+    type: integer
+    x-enum-varnames:
+    - Waiting
+    - Processing
+    - Done
 host: localhost:8080
 info:
   contact: {}
@@ -406,9 +511,88 @@ paths:
       summary: Login
       tags:
       - auth
+  /medical-report:
+    get:
+      description: Get medical report
+      parameters:
+      - default: 1
+        description: Page
+        in: query
+        name: page
+        type: integer
+      - default: 10
+        description: Page size
+        in: query
+        name: page_size
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Medical report response
+          schema:
+            $ref: '#/definitions/controllers.MedicalReportListResponse'
+      summary: Get medical report
+      tags:
+      - medical report
+    post:
+      consumes:
+      - application/json
+      description: Create medical report
+      parameters:
+      - description: Medical report data
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/controllers.MedicalReportRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Medical report response
+          schema:
+            $ref: '#/definitions/controllers.MedicalReportResponse'
+      summary: Create medical report
+      tags:
+      - medical report
+  /medical-report/{id}:
+    get:
+      description: Get medical report by id
+      parameters:
+      - description: ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Medical report response
+          schema:
+            $ref: '#/definitions/controllers.MedicalReportResponse'
+      summary: Get medical report by id
+      tags:
+      - medical report
   /patient:
     get:
       description: Get patient
+      parameters:
+      - description: Patient name
+        in: query
+        name: name
+        type: string
+      - default: 1
+        description: Page
+        in: query
+        name: page
+        type: integer
+      - default: 10
+        description: Page size
+        in: query
+        name: page_size
+        type: integer
       produces:
       - application/json
       responses:
@@ -501,6 +685,15 @@ paths:
           schema:
             $ref: '#/definitions/controllers.PatientResponse'
       summary: Update patient
+      tags:
+      - patient
+  /patient/enums:
+    get:
+      description: Get patient enums
+      produces:
+      - application/json
+      responses: {}
+      summary: Get patient enums
       tags:
       - patient
   /regulation:
@@ -707,6 +900,23 @@ paths:
     get:
       description: Get ticket
       parameters:
+      - description: Ticket status
+        enum:
+        - 1
+        - 2
+        - 3
+        in: query
+        name: status
+        type: integer
+      - description: Date
+        in: query
+        name: date
+        type: string
+      - default: STT
+        description: Order by
+        in: query
+        name: order_by
+        type: string
       - default: 1
         description: Page
         in: query
@@ -730,9 +940,9 @@ paths:
     post:
       consumes:
       - application/json
-      description: Create waiting ticket
+      description: Create ticket
       parameters:
-      - description: Waiting ticket data
+      - description: Ticket data
         in: body
         name: data
         required: true
@@ -742,10 +952,10 @@ paths:
       - application/json
       responses:
         "200":
-          description: Waiting ticket response
+          description: Ticket response
           schema:
-            $ref: '#/definitions/controllers.TicketListResponse'
-      summary: Create waiting ticket
+            $ref: '#/definitions/controllers.TicketResponse'
+      summary: Create ticket
       tags:
       - ticket
   /ticket/{id}:
@@ -765,6 +975,32 @@ paths:
           schema:
             $ref: '#/definitions/controllers.TicketResponse'
       summary: Delete ticket
+      tags:
+      - ticket
+    put:
+      consumes:
+      - application/json
+      description: Update ticket
+      parameters:
+      - description: Ticket id
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Ticket data
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/controllers.UpdateTicketRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Ticket response
+          schema:
+            $ref: '#/definitions/controllers.TicketResponse'
+      summary: Update ticket
       tags:
       - ticket
   /ticket/enums:
