# be/models/staff.go
@@ -1,7 +1,6 @@
 package models
 
 import (
-	"strconv"
 	"time"
 
 	"golang.org/x/crypto/bcrypt"
@@ -11,21 +10,21 @@ import (
 const TableNameStaff = "NhanVien"
 
 type Staff struct {
-	ID           uint      `gorm:"column:MaNV" json:"id"`
-	FullName     string    `gorm:"column:HoTen" json:"full_name"`
-	BirthDate    time.Time `gorm:"column:NgaySinh" json:"birth_date"`
-	Gender       string    `gorm:"column:GioiTinh" json:"gender"`
-	Address      string    `gorm:"column:DiaChi" json:"address"`
-	IdentityCard string    `gorm:"column:CCCD" json:"identity_card"`
-	PhoneNumber  string    `gorm:"column:SDT" json:"phone_number"`
-	Email        string    `gorm:"column:Email" json:"email"`
-	Role         string    `gorm:"column:LoaiNV" json:"role"`
-	Salary       uint      `gorm:"column:MucLuong" json:"salary"`
-	Status       string    `gorm:"column:TrangThai" json:"status"`
-	Password     string    `gorm:"column:Password" json:"-"`
-	CreatedAt    time.Time `gorm:"column:NgayTao" json:"created_at"`
-	UpdatedAt    time.Time `gorm:"column:NgayCapNhat" json:"updated_at"`
-	UpdatedBy    *uint     `gorm:"column:CapNhatBoi" json:"updated_by"`
+	ID           uint       `gorm:"column:MaNV" json:"id"`
+	FullName     string     `gorm:"column:HoTen" json:"full_name"`
+	BirthDate    *time.Time `gorm:"column:NgaySinh" json:"birth_date"`
+	Gender       string     `gorm:"column:GioiTinh" json:"gender"`
+	Address      string     `gorm:"column:DiaChi" json:"address"`
+	IdentityCard string     `gorm:"column:CCCD" json:"identity_card"`
+	PhoneNumber  string     `gorm:"column:SDT" json:"phone_number"`
+	Email        string     `gorm:"column:Email" json:"email"`
+	Role         string     `gorm:"column:LoaiNV" json:"role"`
+	Salary       uint       `gorm:"column:MucLuong" json:"salary"`
+	Status       string     `gorm:"column:TrangThai" json:"status"`
+	Password     string     `gorm:"column:Password" json:"-"`
+	CreatedAt    *time.Time `gorm:"column:NgayTao" json:"created_at"`
+	UpdatedAt    *time.Time `gorm:"column:NgayCapNhat" json:"updated_at"`
+	UpdatedBy    *uint      `gorm:"column:CapNhatBoi" json:"updated_by"`
 }
 
 func (Staff) TableName() string {
@@ -44,7 +43,7 @@ func (staff *Staff) BeforeCreate(tx *gorm.DB) error {
 }
 
 func (staff *Staff) Create() (*Staff, error) {
-	err := DB.Create(&staff).Error
+	err := DB.Create(staff).Error
 	if err != nil {
 		return nil, err
 	}
@@ -62,7 +61,7 @@ func (staff *Staff) Update(updatedStaff Staff) (*Staff, error) {
 		updatedStaff.Password = hashedPassword
 	}
 
-	err := DB.Model(&staff).Updates(updatedStaff).Error
+	err := DB.Model(staff).Updates(updatedStaff).Error
 	if err != nil {
 		return nil, err
 	}
@@ -76,7 +75,7 @@ func (staff *Staff) Delete() (*Staff, error) {
 		return nil, err
 	}
 
-	DB.Delete(&staff)
+	DB.Delete(staff)
 
 	return staff, nil
 }
@@ -93,13 +92,9 @@ func GetStaff(query ...func(*gorm.DB) *gorm.DB) ([]Staff, error) {
 }
 
 func GetStaffByID(id string) (*Staff, error) {
-	ID, err := strconv.Atoi(id)
-	if err != nil {
-		return nil, err
-	}
 	staff := &Staff{}
 
-	err = DB.Where(Staff{ID: uint(ID)}).First(staff).Error
+	err := DB.Where(`"MaNV" = ?`, id).First(staff).Error
 	if err != nil {
 		return nil, err
 	}
